# ME454_2025

./: README.md
HW3/four_bar_linkage/: CMakeLists.txt  package.xml
HW3/four_bar_linkage/launch/: four_bar_linkage_launch.py
HW3/four_bar_linkage/worlds/: four_bar_linkage.world
HW3/four_bar_linkage_cpp/: CMakeLists.txt
HW3/four_bar_linkage_cpp/src/: four_bar_linkage_simulation_20250001.cpp
HW4/: cart_pole_cpp_20250000.cpp
HW4/cartpole/: CMakeLists.txt
HW4/cartpole/config/: cartpoleeffort.yaml
HW4/cartpole/launch/: cartpolePID.launch.py
HW4/cartpole/rsc/urdf/: cartpoleeffort.urdf
HW4/cartpole/src/: pid_publisher_subscriber_node.cpp
ball_throwing/: CMakeLists.txt  package.xml
ball_throwing/launch/: ball_launch.py
ball_throwing/worlds/: ball.world  ball_cylinder.world
bowling/: CMakeLists.txt  package.xml
bowling/launch/: launch.py
bowling/rsc/mesh/: ball.dae  pin.dae
bowling/rsc/urdf/: bowl.urdf  pin.urdf  pin_collision_box.urdf  pin_collision_cylinder.urdf
bowling/worlds/: bowling.world
cartpole/: CMakeLists.txt  package.xml
cartpole/config/: cartpoleeffort.yaml
cartpole/launch/: cartpolePID.launch.py
cartpole/rsc/urdf/: cartpoleeffort.urdf
cartpole/src/: pid_publisher_subscriber_node.cpp
cartpole/worlds/: cartpole.world
coin_rolling/: CMakeLists.txt  package.xml
coin_rolling/include/: mymat.hpp
coin_rolling/launch/: coin_spawn_launch.py
coin_rolling/rsc/urdf/: coin.urdf
coin_rolling/src/: coin_pubsub.cpp  coin_subscriber.cpp  inclined_coin_pubsub.cpp  test_subscriber.cpp
coin_rolling/worlds/: coin_rolling.world
coin_rolling_msg/: CMakeLists.txt  package.xml
coin_rolling_msg/msg/: CoinRolling.msg
cpp_practice1/: CMakeLists.txt  list4arr.cpp  list4arr_eval.cpp
cpp_practice1/include/: listops.h
cpp_practice1/src/: listops.cpp
cpp_practice2/: CMakeLists.txt  list4ptr.cpp  list4ptr_eval.cpp
cpp_practice2/include/: linkedlist.h
cpp_practice2/src/: linkedlist.cpp
crankshaft/: CMakeLists.txt  package.xml
crankshaft/launch/: crankshaft.launch.xml  crankshaftsdf.launch.xml
crankshaft/rsc/urdf/: crankrobot.sdf  crankshaft.urdf
crankshaft/worlds/: crankshaft.world
friction_test/: CMakeLists.txt  package.xml
friction_test/launch/: friction_test.launch.xml
friction_test/rsc/meshes/: billiard_7.dae
friction_test/rsc/urdf/: friction_test.urdf
friction_test/worlds/: friction_test.world
hw2_template/mymat/: CMakeLists.txt
hw2_template/mymat/include/: mymat.hpp
hw2_template/mymat/src/: mymat.cpp  test.cpp
hw2_template/simulation/: CMakeLists.txt
hw2_template/simulation/src/: simulate.cpp
lecture_code/Week03_Codes/: 20240311_ME454_Week3_Flying_Tennis_Racket.ipynb  racket3.cpp
lecture_code/Week04_Codes/: racket4.cpp
lecture_code/Week10_Codes/: back-and-forth_bouncing_ball_force.py  back-and-forth_bouncing_ball_force_p5js_sketch_js.txt  back-and-forth_bouncing_ball_impulse.py  back-and-forth_bouncing_ball_impulse_p5js_sketch_js.txt
lecture_code/Week11_Codes/Part1_two-body_serial_spring_damper/cpp_example/: twobody_spring_damper.cpp  twobody_spring_damper_simulation_compile_and_run.sh
lecture_code/Week11_Codes/Part1_two-body_serial_spring_damper/p5js_example/: sketch.js
lecture_code/Week11_Codes/Part1_two-body_serial_spring_damper/python_example/: twobody_pendulum_simulation.py
lecture_code/Week11_Codes/Part2_two-body_linkage/cpp_example/: twobody_linkage_simulation.cpp  twobody_linkage_simulation_compile_and_run.sh
lecture_code/Week11_Codes/Part2_two-body_linkage/p5js_example/: index.html  sketch.js
lecture_code/Week11_Codes/Part2_two-body_linkage/python_example/: twobody_linkage_simulation.py
lecture_code/Week12_Codes/Part1_one-body_pendulum_baumgarte/python_example/: onebody_rigid_pendulum.py  onebody_rigid_pendulum_baumgarte.py
lecture_code/Week12_Codes/Part1_two-body_pendulum_spring_damper_baumgarte/p5js_example/: sketch.js
lecture_code/Week12_Codes/Part1_two-body_pendulum_spring_damper_baumgarte/python_example/: twobody_linkage_baumgarte.py
lecture_code/Week12_Codes/Part2_two-body_pendulum_spring_damper_baumgarte/p5js_example/: sketch.js
lecture_code/Week12_Codes/Part2_two-body_pendulum_spring_damper_baumgarte/python_example/: twobody_pendulum_spring_damper_baumgarte.py
lecture_code/Week12_Codes/Part3_two-body_linkage_baumgarte/p5js_example/: index.html  sketch.js
lecture_code/Week12_Codes/Part3_two-body_linkage_baumgarte/python_example/: twobody_linkage_baumgarte.py
lecture_code/Week12_Codes/Part4_two-body_linkage_baumgarte_friction_torque/python_example/: twobody_linkage_baumgarte_friction_torque.py
lecture_code/Week13_Codes/Part1_two-body_linkage_baumgarte_new_constraint_eqs/p5js_example/: sketch.js
lecture_code/Week14_Codes/: toytop_3d_constrained_simulation.py
midterm_part1/: CMakeLists.txt
midterm_part1/include/: singlebodysim.hpp
midterm_part1/lib/include/: mymat.hpp  myquaternion.hpp
midterm_part1/lib/src/: myquaternion.cpp
midterm_part1/src/: singlebodysim_20250000.cpp  test.cpp
midterm_part2/: CMakeLists.txt  package.xml
midterm_part2/launch/: launch.py
midterm_part2/rsc/mesh/: tennis_racket_2.stl
midterm_part2/rsc/urdf/: tennis_racket.urdf
midterm_part2/src/: state_forwarder_20250000.cpp  state_printer.cpp
midterm_part2/worlds/: empty_world.world
pendulum_movement/: CMakeLists.txt  package.xml
pendulum_movement/launch/: pendulum_launch.py
pendulum_movement/rsc/: pendulum.sdf  pendulum_double.sdf
pendulum_movement/worlds/: pendulum.world  world.sdf
tricycle/: CMakeLists.txt  package.xml
tricycle/config/: tricycle_position_velocity_controller.yaml
tricycle/launch/: tricycle_launch.py  tricycle_launch.xml
tricycle/urdf/: obstacle.urdf  tricycle.urdf
tricycle/world/: empty_state.world
vibration/: CMakeLists.txt  package.xml
vibration/launch/: car_suspension_launch.py  spring_damper_launch.py
vibration/rsc/urdf/: car_body_only_front.urdf  spring_damper_single.sdf  spring_damper_single.urdf
vibration/worlds/: car_simulation.world  vibration_test.world
(+2 files in other folders)
