<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartpole</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="seungwoo.yoon@kaist.ac.kr">seungwoo</maintainer>
  <license>TODO: License declaration</license>
  <url type="website">http://ros.org/wiki/gazebo_ros_control</url>
  <url type="bugtracker">https://github.com/ros-controls/gazebo_ros2_control/issues</url>
  <url type="repository">https://github.com/ros-controls/gazebo_ros2_control</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

 

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>xacro</depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>

  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- TODO : convert this launch.xml to launch.py > -->
