<?xml version="1.0"?>
<package format="3">
  <name>tricycle</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="skoo@todo.todo">skoo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>ros2launch</exec_depend>
</package>
